Ini tugas p03 Fadita Ayu Azzahra 32221546

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 </body>
 
 <p>
-	<a href="P03.html"> <button>Tugas Pertemuan 03</button> </a>
+	<a href="kosong.html"> <button>Tugas Pertemuan 03</button> </a>
 </p>
 </center>
