Update and rename kosong.html to P03/kosong.html

--- a/P03/kosong.html
+++ b/P03/kosong.html
@@ -71,7 +71,7 @@
 
 <br>
 <p>
-	<a href="index.html"> <button>Kembali Ke Halaman Utama</button></a>
+	<a href="perkenalan.html"> <button>Kembali Ke Halaman Utama</button></a>
 </br>
 </p>
 </center>
