--- a/p05-jquery-delete/tablefadeout.html
+++ b/p05-jquery-delete/tablefadeout.html
@@ -25,37 +25,37 @@
 			</tr>
 
 			<tr id="deret__1">
-				<td class="urutan">1</td>
+				<td>1</td>
 				<td class="namabestie">Nursuviyani Jannah</td>
-				<td class="domisili">Indramayu</td>
+				<td>Indramayu</td>
 				<td class="aksihapus" id="buang__1">Hapus</td>
 			</tr>
 
 			<tr id="deret__2">
-				<td class="urutan">2</td>
+				<td>2</td>
 				<td class="namabestie">Ainun Putri Nurhaliva</td>
-				<td class="domisili">Kabupaten Cirebon</td>
+				<td>Kabupaten Cirebon</td>
 				<td class="aksihapus" id="buang__2">Hapus</td>
 			</tr>
 
 			<tr id="deret__3">
-				<td class="urutan">3</td>
+				<td>3</td>
 				<td class="namabestie">Herlyta Qotrun Nada</td>
-				<td class="domisili">Kabupaten Cirebon</td>
+				<td>Kabupaten Cirebon</td>
 				<td class="aksihapus" id="buang__3">Hapus</td>
 			</tr>
 
 			<tr id="deret__4">
-				<td class="urutan">4</td>
+				<td>4</td>
 				<td class="namabestie">Maria Adelina Bui</td>
-				<td class="domisili">NTT</td>
+				<td>NTT</td>
 				<td class="aksihapus" id="buang__4">Hapus</td>
 			</tr>
 
 			<tr id="deret__5">
-				<td class="urutan">5</td>
+				<td>5</td>
 				<td class="namabestie">Aldi Maulana</td>
-				<td class="domisili">Cirebon</td>
+				<td>Cirebon</td>
 				<td class="aksihapus" id="buang__5">Hapus</td>
 			</tr>
 		</tbody>
